# GreyBot

./: Cargo.toml  README.md
src/: client.rs  consts.rs  data_structures.rs  lib.rs  main.rs  thread_pool.rs
src/data_structures/: embed.rs  mod.rs  sticker.rs
