[package]
name = "greybot"
version = "0.1.0"
edition = "2018"
authors = ["SarahGreyWolf <m.sarahgreywolf@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
reqwest = {version = "0.11.4", features=["blocking", "json"]}
tungstenite = {version = "0.14.0", features=["rustls-tls"]}
ron = "0.6.4"
